Fixed dropdown menu alignment

--- a/projects/planner/src/styles.scss
+++ b/projects/planner/src/styles.scss
@@ -9,4 +9,7 @@
     min-height: 485px;
 }
 
-
+// Fix for mdb dropdown, since ti doesn't respect parent element
+.dropdown-menu {
+    position: relative !important;
+}
